--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Image Processing",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kanchana weerasekera",
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "minimist": "^1.2.7",
+    "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "request": "^2.88.2"
   }
