--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Image Processing",
-  "main": "index.js",
+  "engines": {
+    "node": "14.19.0"
+  },
+  "main": "node index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kanchana weerasekera",
@@ -12,11 +15,9 @@
   "dependencies": {
     "@mapbox/blend": "^2.0.1",
     "axios": "^1.1.3",
-    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "minimist": "^1.2.7",
-    "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "request": "^2.88.2"
   }
